# FlightGear-Simulator-Interpreter

./: CMakeLists.txt  DataReaderServer.cpp  DataReaderServer.h  README.md  User.cpp  main.cpp  makefile
Commands/: ConnectCommand.cpp  PrintCommand.cpp
Utils/: ShuntingYard.cpp  ShuntingYard.h
